--- a/portfolio-master/portfolio-master/app/routes/home/project-summary.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/project-summary.module.css
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 
   @media (--mediaDesktop) {
     margin: var(--space2XL) 0;
@@ -16,11 +17,13 @@
   @media (--mediaTablet) {
     height: auto;
     margin: var(--space3XL) 0;
+    overflow: visible;
   }
 
   @media (--mediaMobile) {
     padding-bottom: var(--space4XL);
     margin-bottom: 0;
+    overflow: visible;
   }
 
   &[data-first='true'] {
@@ -59,6 +62,11 @@
     grid-template-columns: 100%;
     flex-direction: column-reverse;
     height: auto;
+    padding: 0 var(--spaceL);
+  }
+
+  @media (--mediaMobile) {
+    padding: 0 var(--spaceM);
   }
 }
 
@@ -131,7 +139,7 @@
     }
 
     @media (--mediaMobile) {
-      --width: 108%;
+      --width: 100%;
 
       left: 0;
       max-height: none;
